--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -27,6 +27,12 @@
   urldate = {2023-01-08}
 }
 
+@online{teleopjoy,
+  title = {{ros2 teleop twist joy}},
+  url = {https://github.com/ros2/teleop_twist_joy},
+  urldate = {2023-05-01}
+}
+
 @manual{timovyProjekt,
   author = {{Bc. Marek Pacalaj, Bc. Tomáš Kútik, Bc. Dominik Gula, Bc. Dávid Pavlič, Bc. Daniel Ďurkovič}},
   title = {Mobilný podstavec pre robota},
@@ -85,7 +91,6 @@
   author = {{Maxon}},
   title = {EPOS Command Library},
   subtitle = {Document ID: rel6806},
-  month = {November},
   year = {2019}
 }
 
