tech: intor to roscontrol
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -33,6 +33,12 @@
   urldate = {2023-05-01}
 }
 
+@online{roscontrol,
+  title = {{ros2 control}},
+  url = {https://control.ros.org/master/doc/differences_to_ros1/differences_to_ros1.html},
+  urldate = {2023-05-03}
+}
+
 @manual{timovyProjekt,
   author = {{Bc. Marek Pacalaj, Bc. Tomáš Kútik, Bc. Dominik Gula, Bc. Dávid Pavlič, Bc. Daniel Ďurkovič}},
   title = {Mobilný podstavec pre robota},
