tech: programming language
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/technologie.tex
+++ b/includes/technologie.tex
@@ -89,8 +89,9 @@ robotoch. Nad~operačným systémom Windows má niekoľko výhod.
 \subsection{Programovací jazyk a~jeho prostredie}
 \label{sec:programovaci_jazyk}
 
-Medzi programovacími jazykmi, ktoré sme mohli použiť boli na~vyber nasledovne: \textit{C++}, \textit{C}, \textit{Python},
-\textit{Matlab}, \textit{Java}.
+Medzi programovacie jazy, ktoré by sme mohli použiť patria: \textit{C++}, \textit{C}, \textit{Python},
+\textit{Matlab}, \textit{Java}. Aby sme sa rozhodli, ktorý jazyk použijeme pri vytváraní ovládača, tak sme si spísali
+ich výhody a nevýhody.
 
 \begin{itemize}
 	\item \textbf{C a~C ++}: C a~C ++ sú~hlavné jazyky používané pri~vývoji ROS aplikácií. Sú~to~výkonné a~efektívne jazyky,
@@ -99,9 +100,9 @@ Medzi programovacími jazykmi, ktoré sme mohli použiť boli na~vyber nasledovn
 
 	\item \textbf{Java}: Java je ďalší jazyk, ktorý sa môže použiť na~implementáciu aplikácií v~Robotickom operačnom
 		systéme. Je menej bežné používaný ako jazyk C++, ale~má výhodu, a~to~takú, že~je prenositeľný jazyk, ktorý môže
-		byť spustený na~akejkoľvek platforme, ktorá podporuje JVM (Virtuálny stroj podporujúci Javu) (\acrlong{JVM}).
-		Java je vhodná pre~vývoj vysoko úrovňových komponentov robotického systému, ako sú~GUI užívateľské rozhrania
-		(z~anglického \acrlong{GUI}) a~sieťová komunikácia.
+		byť spustený na~akejkoľvek platforme, ktorá podporuje JVM (\acrlong{JVM}) (Virtuálny stroj podporujúci Javu).
+		Java je vhodná pre~vývoj vysoko úrovňových komponentov robotického systému, ako sú~GUI (z~anglického \acrlong{GUI})
+		(užívateľské rozhranie) a~sieťová komunikácia.
 
 	\item \textbf{Python}: Python je populárny jazyk pre~vývoj ROS2 kvôli svojej čitateľnosti a~jednoduchosti použitia.
 		Je vhodný pre~vývoj vysoko úrovňových komponentov robotického systému, ako sú~algoritmy na~rozhodovanie,
@@ -115,8 +116,9 @@ Medzi programovacími jazykmi, ktoré sme mohli použiť boli na~vyber nasledovn
 	\item \textbf{Výkon}: C a~C++ poskytujú najlepší výkon pre~ROS aplikácie kvôli ich nízkoúrovňovej implementácii a~priamemu
 		prístupu k~pamäti. Python, Matlab a~Java sú~pomalšie ako C a~C ++ kvôli ich interpretácii.
 
-	\item \textbf{Čas vývoja}: Python a~Java sa vyvíjajú rýchlejšie ako C a~C ++ kvôli ich jednoduchosti a~jednoduchosti
+	\item \textbf{Čas vývoja}: Python a~Java sa vyvíjajú rýchlejšie ako C a~C++ kvôli ich jednoduchosti a~jednoduchosti
 		použitia. Matlab môže byť tiež rýchlejší pri~vývoji pre~určité úlohy vďaka svojim zabudovaným knižniciam a~nástrojom.
+		Medzi tieto nástroje patri napríklad \textit{Simunlink} alebo \textit{Stateflow}.
 
 	\item \textbf{Kompatibilita}: Všetky uvedené jazyky môžu byť použité s~Robotickým operačnom systémom a~môžu
 		komunikovať s~robotom pomocou TCP/IP komunikácie.
